--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -2,10 +2,15 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 name: Node.js CI
 on:
-  push:
-    branches: [main]
-  pull_request_target:
-    branches: [main]
+workflow_dispatch:
+inputs:
+logLevel:
+description: 'Log level'
+required: true
+default: 'warning'
+tags:
+description: 'Test scenario tags'
+required: false
 
 env:
   SonatypeUrl: "https://finos.sonatype.app/platform/"
