--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -2,15 +2,12 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 name: Node.js CI
 on:
-workflow_dispatch:
-inputs:
-logLevel:
-description: 'Log level'
-required: true
-default: 'warning'
-tags:
-description: 'Test scenario tags'
-required: false
+  workflow_dispatch:
+    inputs:
+      # Define any input parameters here if needed
+      example_input:
+        description: 'Example input description'
+        required: false
 
 env:
   SonatypeUrl: "https://finos.sonatype.app/platform/"
